--- a/app/src/main/res/menu/bottom_navigation_main.xml
+++ b/app/src/main/res/menu/bottom_navigation_main.xml
@@ -17,6 +17,6 @@
         android:id="@+id/action_music"
         android:enabled="true"
         android:icon="@drawable/ic_tab_top"
-        android:title="@string/greatest_hits"
+        android:title="@string/title_greatest_hits"
         app:showAsAction="ifRoom" />
 </menu>
